--- a/Project_1B_ Project_Template-Copy1.ipynb
+++ b/Project_1B_ Project_Template-Copy1.ipynb
@@ -115,7 +115,7 @@
     "# uncomment the code below if you would like to get total number of rows \n",
     "print(len(full_data_rows_list))\n",
     "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
-    "print(full_data_rows_list)\n",
+    "# print(full_data_rows_list)\n",
     "\n",
     "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
     "# Apache Cassandra tables\n",
